# Snap

./: .gitignore  CMakeLists.txt  README.md  port_windows.py  snap.hpp
docs/: API_REFERENCE.md  API_REFERENCE.txt  BENCHMARKS.txt  SNAP.txt  TUNING.md  TUNING.txt
examples/: 01_inproc.cpp  02_shm.cpp  03_udp.cpp  04_tcp.cpp  05_pubsub.cpp  06_pipeline.cpp  07_multicast.cpp  09_batch.cpp  10_http_server.cpp  11_https_server.cpp  12_ws_chat_server.cpp  main.cpp
includes/: dispatch.hpp  http_link.hpp  http_server.hpp  ipc_link.hpp  memory_pool.hpp  mpmc_queue.hpp  multicast_link.hpp  pipeline.hpp  ring_buffer.hpp  shm_link.hpp  ssl_link.hpp  tcp_link.hpp  udp_link.hpp  utils.hpp  ws_link.hpp  ws_server.hpp
test/: bench.cpp  dispatch_test.cpp  mpmc_test.cpp  spsc_test.cpp
